[gd_scene load_steps=4 format=3 uid="uid://cvx816rx11i5u"]

[ext_resource type="Script" path="res://scrips/bala2.gd" id="1_6uue3"]

[sub_resource type="PrismMesh" id="PrismMesh_4l7af"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j6wd2"]
radius = 57.4279

[node name="bala" type="RigidBody2D" groups=["bala_enemy"]]
modulate = Color(1, 1, 0, 1)
z_index = -2
gravity_scale = 0.0
script = ExtResource("1_6uue3")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
position = Vector2(9.53674e-07, 0)
scale = Vector2(109.714, 98.2857)
mesh = SubResource("PrismMesh_4l7af")

[node name="MeshInstance2D2" type="MeshInstance2D" parent="."]
position = Vector2(-0.318176, -28.2274)
rotation = -3.14159
scale = Vector2(128.636, 104.455)
mesh = SubResource("PrismMesh_4l7af")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(3.8147e-06, -15)
scale = Vector2(4.57143, 4.92857)

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(0.7, 0.7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -17.1429)
shape = SubResource("CircleShape2D_j6wd2")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
